--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,6 +18,9 @@
   .form-field {
     @apply p-3 rounded-md text-gray-900 placeholder:text-gray-500 focus:outline-none focus:ring ring-gray-400;
   }
+  .section-title {
+    @apply text-3xl font-black mb-4;
+  }
 }
 
 svg {
