--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,16 +4,16 @@
 
 @layer components {
   .nav-btn {
-    @apply bg-gray-800 bg-opacity-70 hover:text-white hover:bg-opacity-80 font-bold rounded-md px-6 py-3 text-lg;
+    @apply flex gap-3 items-center bg-gray-800 bg-opacity-70 hover:text-white hover:bg-opacity-80 font-bold rounded-md px-6 py-3 text-lg;
   }
   .hero-btn {
     @apply flex gap-3 items-center bg-gray-200 text-gray-800 hover:bg-gray-300 font-bold rounded-md px-6 py-3 text-lg;
   }
   .items {
-    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4;
+    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4;
   }
   .item {
-    @apply opacity-90 hover:opacity-100 flex flex-col;
+    @apply opacity-90 hover:opacity-100 flex flex-col break-words;
   }
   .item img{
     @apply rounded-md
