--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,14 @@
 svg {
   width: 1.2rem;
 }
+html,body {
+  min-height: 100%;
+  height: 100%;
+}
+
+#root {
+  height:100%;
+}
 
 body {
   @apply bg-c-bg text-gray-300;
