--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,8 +15,8 @@
   .item {
     @apply opacity-90 hover:opacity-100 flex flex-col break-words;
   }
-  .item img{
-    @apply rounded-md
+  .item img {
+    @apply rounded-md;
   }
   .form-field {
     @apply p-3 rounded-md text-gray-900 placeholder:text-gray-500 focus:outline-none focus:ring ring-gray-400;
@@ -24,18 +24,28 @@
   .section-title {
     @apply text-3xl font-black mb-4;
   }
+  .footer {
+    @apply bg-gray-900 bg-opacity-30 rounded-md p-10 text-center mt-14;
+  }
+  .app-wrapper {
+    @apply relative px-8 max-w-screen-xl mx-auto h-full flex flex-col;
+  }
+  .app-bg {
+    @apply -z-10 absolute top-24 left-0 opacity-30 w-full object-contain object-top;
+  }
 }
 
 svg {
   width: 1.2rem;
 }
-html,body {
+html,
+body {
   min-height: 100%;
   height: 100%;
 }
 
 #root {
-  height:100%;
+  height: 100%;
 }
 
 body {
