--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  min-height: 100%;
+  height: 100%;
+}
+
+svg {
+  width: 1.5rem;
+}
+
+#root {
+  height: 100%;
+}
+
+body {
+  @apply bg-c-bg text-gray-300;
+}
+
+img {
+  width: 100%;
+  max-width: 100%;
+  display: block;
+}
+
+a:hover {
+  @apply text-white;
+}
+
+.font-ge {
+  font-family: "bpg_extrasquare_mtavruli";
+}
+
+.font-ru {
+  font-family: "bahnschrift";
+}
+
 @layer components {
   .nav-btn {
     @apply flex gap-3 items-center bg-gray-800 bg-opacity-70 hover:text-white hover:bg-opacity-80 font-bold rounded-md px-6 py-3 text-lg;
@@ -38,29 +74,18 @@
   }
 }
 
-svg {
-  width: 1.2rem;
-}
-html,
-body {
-  min-height: 100%;
-  height: 100%;
-}
-
-#root {
-  height: 100%;
-}
-
-body {
-  @apply bg-c-bg text-gray-300;
-}
-
-img {
-  width: 100%;
-  max-width: 100%;
-  display: block;
-}
-
-a:hover {
-  @apply text-white;
+@layer base {
+  @font-face {
+    font-family: "bpg_extrasquare_mtavruli";
+    src: local("bpg_extrasquare_mtavruli"),
+      url("../assets/fonts/bpg_extrasquare_mtavruli_2009.ttf")
+        format("truetype");
+    font-weight: normal;
+  }
+  @font-face {
+    font-family: "bahnschrift";
+    src: local("bahnschrift"),
+      url("../assets/fonts/bahnschrift.ttf") format("truetype");
+    font-weight: normal;
+  }
 }
