--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -68,7 +68,7 @@ a:hover {
     @apply p-3 rounded-md text-gray-900 placeholder:text-gray-500 focus:outline-none focus:ring ring-gray-400;
   }
   .section-title {
-    @apply text-3xl font-black mb-4 text-primary;
+    @apply text-2xl md:text-3xl font-black mb-4 text-primary;
   }
   .footer {
     @apply bg-gray-900 bg-opacity-30 rounded-md p-10 text-center mt-14;
