--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -71,7 +71,7 @@ a:hover {
     @apply text-2xl md:text-3xl font-black mb-4 text-primary;
   }
   .footer {
-    @apply bg-gray-900 bg-opacity-30 rounded-md p-10 text-center mt-14;
+    @apply bg-gray-900 bg-opacity-30 rounded-md p-10 text-center flex flex-col gap-4 items-center justify-center sm:flex-row sm:justify-between;
   }
   .app-wrapper {
     @apply relative h-full flex flex-col;
