--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -80,7 +80,7 @@ a:hover {
     @apply px-8 max-w-screen-xl mx-auto;
   }
   .app-bg {
-    @apply -z-10 fixed top-24 left-0 opacity-30 w-full object-contain object-top;
+    @apply -z-10 fixed top-0 left-0 opacity-30 w-full h-full object-cover object-top;
   }
 }
 
