modified burger menu pointing arrow position

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -57,7 +57,7 @@ a:hover {
     @apply bg-back-darker bg-opacity-95 rounded-md;
   }
   .vertical-nav-inner:after {
-    @apply absolute z-20 left-1/2 transform -translate-x-1/2 -top-4 border-r-transparent border-t-transparent border-l-transparent border-back-darker border-[8px] border-solid block w-0 h-0;
+    @apply absolute z-20 right-5 transform -translate-x-1/2 -top-4 border-r-transparent border-t-transparent border-l-transparent border-back-darker border-[8px] border-solid block w-0 h-0;
     content: " ";
   }
   .items {
