removed flex-col on smallest viewports

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,7 +51,7 @@ a:hover {
     @apply focus:outline-none focus:ring-4 ring-gray-200 ring-opacity-20 flex gap-3 items-center bg-gray-200 text-gray-800 hover:bg-gray-300 rounded-md px-4 py-2 text-lg;
   }
   .vertical-nav {
-    @apply absolute left-1/2 sm:left-[initial] sm:right-0 sm:transform-none transform -translate-x-1/2 lg:hidden;
+    @apply absolute right-0 lg:hidden;
   }
   .vertical-nav-inner {
     @apply bg-back-darker bg-opacity-95 rounded-md;
